# seemless.app

./: .gitignore  .gitlab-ci.yml  README.md  gitlab-ci.yml  qodana-backend.yaml  qodana-frontend.yaml
back/: Cargo.toml
back/src/: app.rs  main.rs
back/src/models/: mod.rs  sdp.rs  signal.rs  user.rs  user_manager.rs
back/src/models/error/: handler.rs
back/src/models/state/: app_state.rs  error.rs  mod.rs  user_state_im.rs
back/src/services/: tracing.rs
back/src/tests/models/state/: mod.rs  user_state_test.rs
back/src/ws/: websocket.rs
backend/: .env.example  Dockerfile  air.toml  go.mod  go.sum  main.go
backend/cmd/web/: main.go
backend/data/: error.go  request.go  user.go
backend/handlers/: hub.go  ws.go  ws_test.go
backend/internal/ports/: code.go  message.go  room.go  user.go
backend/store/: userstore_interface.go  userstore_test.go  userstorememory.go
backend/tests/store/: userstore_test.go
backend/utils/: struct_mapper.go  struct_mapper_test.go
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  pwa-assets.config.ts  shim-vue.d.ts  tailwind.config.js  vite.config.ts
frontend/public/StreamSaver/: mitm.html  sw.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ConfirmDownload.vue  DownloadPopup.vue  FileCard.vue  FileInput.vue  FilePreview.vue  FileStatusCard.vue  (+14 more)
terraform/: .terraform.lock.hcl  alb.tf  asg.tf  backend.tf  cloudfront.tf  ecr.tf  ecs.sh  elb.tf  frontend.tf  lb.tf  lightsail.tf  main.tf  route53.tf  s3-policy.json  s3.tf  sg.tf  variables.tf  vpc.tf
(+80 files in other folders)
