[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"]}
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive", "rc"]}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"